[Bugreport-UI]
1, Fixed cut off icon and labels
2, Use elided text for Avd Name Label
3, Change font size of repro steps text editor and bug report text
editor to be the same as labels
4, Use default button stylesheet for "SAVE REPORT" button
5, Adjusted positions for all widgets.
b/63484889

--- a/android/android-emu/android/skin/qt/styles/fonts_stylesheet_template.css
+++ b/android/android-emu/android/skin/qt/styles/fonts_stylesheet_template.css
@@ -11,6 +11,10 @@
  */
 
 QGroupBox { font-weight: regular; font-size: %%FONT_MEDIUM%%; }
+*[ColorGroup="TextEdit"] {
+    font-weight: regular;
+    font-size: %%FONT_MEDIUM%%;
+}
 QComboBox, QLineEdit, QPlainTextEdit, QPushButton, QRadioButton, QAbstractSpinBox {
     font-weight: regular;
     font-size: %%FONT_LARGE%%;
